fixed navbar overflow issue

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -4978,8 +4978,7 @@ nav {
   background-color: #ee6e73;
   width: 100%;
   height: 56px;
-  line-height: 56px;
-  overflow: hidden; }
+  line-height: 56px; }
   nav a {
     color: #fff; }
   nav .nav-wrapper {
