--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -5,7 +5,6 @@ nav {
   width: 100%;
   height: $navbar-height-mobile;
   line-height: $navbar-height-mobile;
-  overflow: hidden;
 
   a { color: #fff; }
 
